--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Learn Enough Javascript</title>
   <script type="text/javascript">
     alert("Hello, JavaScript!")
+    console.log("This page contains a friendly greeting.")
+    var firstName = "Francisco"
+    var lastName = "Ramirez"
+    console.log(`My name is ${firstName} ${lastName}`)
   </script>
 </head>
 <body>
