--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Learn Enough Javascript</title>
   <script type="text/javascript">
-    alert("Hello, JavaScript!")
+    const daysOfTheWeek = ["Sunday", "Monday", "Tuesday", "Wednesday", 
+                          "Thursday", "Friday", "Saturday"];
+    let now = new Date();
+    let dayName = daysOfTheWeek[now.getDay()];
+    alert(`Hello, JavaScript! Today is ${dayName}`);
   </script>
 </head>
 <body>
